Fix spacing issue

--- a/StyleSheet/contactpage.css
+++ b/StyleSheet/contactpage.css
@@ -7,7 +7,7 @@ body {
 	position: relative;
 	width: 100%;
 	min-height: 100vh;
-	padding: 2rem;
+	padding: 10rem 0 5rem 0;
 	overflow: hidden;
 	display: flex;
 	align-items: center;
